# Texture2DDecoder

./: .gitignore  .gitmodules  README.md
.github/workflows/: build-decoder.yml  build-wrapper.yml
Texture2DDecoderNative/: CMakeLists.txt  endianness.h
Texture2DDecoderNative/crunch/: crn_decomp.h
Texture2DDecoderNative/unitycrunch/: crn_decomp.h
Texture2DDecoderWrapper/: T2DDll.cs  Texture2DDecoderWrapper.csproj  TextureDecoder.cs
cmake/: cmake-helper.psm1  setup-emsdk.ps1
nuget/: Android.csproj  Directory.Build.props  Directory.Build.targets  Linux.csproj  MacCatalyst.csproj  WebAssembly.csproj  WebAssembly.props  Windows.csproj  build.ps1  iOS.csproj  macOS.csproj
